# dawn

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .prettierignore  .prettierrc  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE_GUIDE.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.cuda  Dockerfile.dev  Dockerfile.jetson  Dockerfile.rpi  GETTING_STARTED.md  LLM_INTEGRATION_GUIDE.md  README.md  asr_interface.c  asr_interface.h  asr_vosk.c  asr_vosk.h  asr_whisper.c  asr_whisper.h  audio_capture_thread.c  audio_capture_thread.h  audio_utils.c  chunking_manager.c  chunking_manager.h  commands_config_nuevo.json  dawn.c  dawn.h  dawn.toml.example  dawn_network_audio.c  dawn_network_audio.h  dawn_server.c  dawn_server.h  (+48 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_contradiction.c  bench_contradiction_stub.c  bench_retrieval.c  bench_retrieval_stub.c  contradiction_pairs.h  run_benchmark.py
cmake/: DawnCUDA.cmake  DawnTools.cmake
common/: CMakeLists.txt
common/include/: logging.h  logging_bridge.h  logging_common.h
common/include/asr/: asr_common.h  asr_engine.h  asr_vosk.h  asr_whisper.h  vad_silero.h
common/include/audio/: chime.h  ring_buffer.h
common/include/tts/: tts_piper.h  tts_preprocessing.h
common/include/utils/: sentence_buffer.h  string_utils.h
common/src/: logging.c  logging_bridge.c  logging_common.c
common/src/asr/: asr_engine.c  asr_vosk.c  asr_whisper.c  vad_silero.c
common/src/audio/: chime.c  ring_buffer.c
common/src/tts/: tts_piper.cpp  tts_preprocessing.cpp
common/src/utils/: sentence_buffer.c  string_utils.c
dawn-admin/: CMakeLists.txt  main.c  password_prompt.c  password_prompt.h  socket_client.c  socket_client.h
dawn_satellite/: CMakeLists.txt  README.md
dawn_satellite/config/: satellite.conf  satellite.toml
dawn_satellite/include/: audio_capture.h  audio_playback.h  dap_client.h  display.h  gpio_control.h  music_playback.h  music_stream.h  neopixel.h  satellite_config.h  satellite_state.h  sdl_ui.h  spectrum_defs.h  toml.h  tts_playback_queue.h  voice_processing.h  ws_client.h
dawn_satellite/src/: audio_capture.c  audio_playback.c  dap_client.c  display.c  gpio_control.c  main.c  music_playback.c  music_stream.c  neopixel.c  satellite_config.c  satellite_state.c  toml.c  tts_playback_queue.c  voice_processing.c  ws_client.c
dawn_satellite/src/ui/: backlight.c  backlight.h  music_types.h  sdl_ui.c  ui_alarm.c  ui_alarm.h  ui_colors.h  ui_markdown.c  ui_markdown.h  ui_music.c  ui_music.h  ui_orb.c  ui_orb.h  ui_screensaver.c  ui_screensaver.h  ui_slider.c  ui_slider.h  ui_theme.c  ui_theme.h  ui_touch.c  ui_touch.h  ui_transcript.c  ui_transcript.h  ui_util.h
dawn_satellite_arduino/: README.md  arduino_secrets.h.example  dawn_satellite_arduino.ino
demos/full-mock/: README.md  dawn-simulation.toml  docker-compose.demo.yaml  secrets-simulation.toml
docs/: AEC_IMPLEMENTATION_GUIDE.md  CALDAV_DESIGN.md  CLOUD_DEPLOYMENT.md  DAP2_DESIGN.md  DAP2_SATELLITE.md  DOCKER.md  EMAIL_DESIGN.md  FAQ.md  GETTING_STARTED_SERVER.md  GOOGLE_OAUTH_SETUP.md  HOMEASSISTANT_SETUP.md  LCM_DESIGN.md  LLM_INTEGRATION_GUIDE.md  MEMORY_SYSTEM_DESIGN.md  MQTT_SETUP.md  MULTI_THREADED_CORE_DESIGN.md  OASIS_COMMUNICATIONS_PROTOCOL.md  PHONE_SMS_DESIGN.md  RAG_DESIGN.md  SCHEDULER_DESIGN.md  SECURITY_HARDENING_GUIDE.md  TOOLS_DESIGN.md  TOOL_DEVELOPMENT_GUIDE.md  TOOL_PLAN_EXECUTOR_DESIGN.md  TUI_IMPLEMENTATION_PLAN.md  UNIFIED_IMAGE_STORE_DESIGN.md  USER_AUTH_DESIGN.md  WEBSOCKET_PROTOCOL.md  WEBUI_DESIGN.md  guide.md
docs/arch/: command-processing.md
docs/archive/: DAP2_DESIGN.md  LLM_INTERRUPT_IMPLEMENTATION.md  MULTI_THREADED_CORE_DESIGN.md  PLEX_INTEGRATION_DESIGN.md  TUI_IMPLEMENTATION_PLAN.md  WEBUI_DESIGN.md
include/: audio_utils.h  conversation_manager.h  dawn.h  dawn_error.h  image_store.h  input_queue.h  logging.h  logging_bridge.h  mosquitto_comms.h  secrets.h  state_machine.h  text_to_command_nuevo.h  version.h  wavfile.hpp
include/asr/: asr_interface.h  asr_vosk.h  asr_whisper.h  chunking_manager.h  vad_silero.h
include/audio/: aec_calibration.h  aec_processor.h  audio_backend.h  audio_capture_thread.h  audio_converter.h  audio_decoder.h  audio_utils.h  flac_playback.h  http_download.h  mic_passthrough.h  music_db.h  music_scanner.h  music_source.h  plex_client.h  plex_db.h  resampler.h
include/auth/: admin_socket.h  auth_crypto.h  auth_db.h  auth_db_internal.h  (+1 more)
models/: PIPER_ALBA_LICENSE  PIPER_NORTHERN_ENGLISH_MALE_LICENSE  vosk-model
remote_dawn/: README.md  dawn_multi_client_architecture.md  echo_test_server.py  protocol_purpose.md  protocol_specification.md  remote_dawn.ino
scripts/: install.conf.example  install.sh  smoke_test.sh
src/: dawn.c  image_store.c  input_queue.c  logging.c  logging_bridge.c  mosquitto_comms.c  text_to_command_nuevo.c  word_to_number.c
test_recordings/: BENCHMARK_RESULTS.md  README.md  analyze_results.py  recording_guide.txt  run_complete_benchmark.sh
tests/: CMakeLists.txt  PLAN_EXECUTOR_TEST_PROMPTS.md  README.md  asr_benchmark.c  smoke_test.sh  test_asr_concurrent.c  test_auth_db.c  test_calculator.c  test_calendar_db.c  test_config_validate.c  test_contacts_db.c  test_contacts_db_stub.c  test_context_compaction.c  test_context_compaction_impl.c  test_crypto_store.c  test_crypto_store_stub.c  test_dawn_admin.sh  test_device_types.c  test_document_chunker.c  test_document_db.c  test_document_db_stub.c  test_document_extract.c  test_email_db.c  test_email_db_stub.c  test_embedding_engine.c  test_embedding_engine_stub.c  test_html_parser.c  test_input_queue.c  test_instruction_loader.c  test_memory_embeddings.c  test_memory_embeddings_stub.c  test_memory_filter.c  test_memory_similarity.c  test_missed_notifications_db.c  test_music_db.c  test_pentest.sh  test_phone_db.c  test_plan_executor.c  test_plan_executor_stub.c  test_rate_limiter.c  (+21 more)
tests/search_quality/: analyze_results.py  test_search_quality.sh
tests/unity/: unity.c  unity.h  unity_internals.h
www/: index.html  login.html  manifest.json
(+510 files in other folders)
